# scanning

./: Cargo.toml  README.md  error.txt  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 8xirrgp9v8f0kmyby8qdgmkk3dxa848b-source  ma29vpvmqr3g9wa3p063v99gvacm608j-source
src/: error.rs  lib.rs  sym.rs
src/generators/: ascii.rs  image.rs  json.rs  svg.rs
src/sym/: codabar.rs  code11.rs  code128.rs  code39.rs  code93.rs  ean13.rs  ean8.rs  ean_supp.rs  helpers.rs  tf.rs  upca.rs
