[package]
name = "scanning"
version = "2.0.0"
edition = "2021"
authors = ["Andrew Buntine <info@bunts.io>"]
description = "A barcode-encoding library"
homepage = "https://github.com/ofluffydev/scanning"
repository = "https://github.com/ofluffydev/scanning"
documentation = "https://docs.rs/scanning"
readme = "README.md"
keywords = ["barcode", "barcodes", "barcode-encoding"]
license = "MIT OR Apache-2.0"
exclude = [
    "media/*",
    "TODO",
]
categories = ["encoding", "graphics", "multimedia::encoding"]

[features]
default = ["ascii", "json", "svg", "std"]
ascii = []
json = []
svg = []
image = ["dep:image"]
std = []

[dependencies.image]
version = "0.25"
optional = true
default-features = false
features = ["gif", "png", "webp"]

[package.metadata.docs.rs]
all-features = true
